# adcs

./: .gitignore  README.md  main.m  test_lint_checker.h
.github/workflows/: clang-linter.yml  codeql.yml  devskim.yml  super-linter.yml
adcs-simulink-simulation/: AttitudeSimulation.slx  README.md
archive/: README.md
archive/adcs-simulink-simulation/: WorldFile.wrl
archive/attitude-control-simulator/: test.stl  testAnimateObject.m  testAnimateReposition.m
archive/attitude-control-simulator/+Util/: CreateVerticesAndFaces.m  Euler2R.m
archive/attitude-control-simulator/+Visualizers/: DrawObject.m  GetPatch.m
archive/gimbal/: .README.md.un~
archive/reaction-wheel-control/MotorBreakout/: MotorBreakout-B.Cu.gbl  MotorBreakout-B.Mask.gbs  MotorBreakout-B.SilkS.gbo  MotorBreakout-Edge.Cuts.gm1  MotorBreakout-F.Cu.gtl  MotorBreakout-F.Mask.gts  MotorBreakout-F.SilkS.gto  MotorBreakout-cache.lib  MotorBreakout.bak  MotorBreakout.drl  MotorBreakout.kicad_pcb  MotorBreakout.kicad_pcb-bak  MotorBreakout.net  MotorBreakout.sch
archive/reaction-wheel-control/MotorBreakoutPlot/: MotorBreakout-B.Cu.gbl  MotorBreakout-F.Cu.gtl  MotorBreakout-F.Mask.gts  MotorBreakout-F.SilkS.gto
archive/sun-sensors/: README.md
archive/sun-sensors/two-dimension/: PolynomialRegression.h  calibrated_data.h  diode_qset.cpp  diode_qset.h
attitude-control-simulator/: README  testRotateStlPatch.m  testStl2Patch.m
attitude-control-simulator/+Helper/@Unpack/: Unpack.m
attitude-control-simulator/+Objects/@Object3D/: Object3D.m
attitude-control-simulator/+Objects/@Quantity/: Quantity.m  QuantityTest.m
attitude-control-simulator/+Objects/@Shape/: Shape.m
attitude-control-simulator/+Util/: CreateVerticesAndFacesTest.m  Euler2RTest.m  EulerToQuaternion.m  Stl2Patch.m  Stl2PatchTest.m
attitude-control-simulator/+Visualizers/: AnimateObject.m  AnimateReposition.m
attitude-control-simulator/Simulator/Power/: README.md
balloon-dev/: README
balloon-dev/Master/: Master.ino
balloon-dev/master-no-rtos/: master-no-rtos.ino
balloon-dev/slave/: slave.ino
balloon-dev/slave-no-rtos/: slave-no-rtos.ino
csdc-6/: .gitignore  README.md
csdc-6/adcs-control-code/: README.md
csdc-6/adcs-control-code/inc/: DetumblingModeController.hpp  PointingModeController.hpp
csdc-6/adcs-control-code/src/: DetumblingModeController.cpp  PointingModeController.cpp
csdc-6/adcs-simulation/: CMakeLists.txt  README.md  simulator.yaml
csdc-6/adcs-simulation/MATLAB/: adcs.slx  adcs_simulation.slx  euler_to_rw.slx  euler_to_rw_test.slx  physics_sim.slx  rw_to_accel.slx  test_adcs.slx  test_euler_to_rw.slx  test_rw_to_accel.slx
csdc-6/adcs-simulation/cpp/: .gitattributes  CMakeLists.txt  README.md  cmake.sh  results_visualization.py  results_visualization_old.py  simulator.yaml  simulator_1.yaml  visualization.ipynb
csdc-6/adcs-simulation/cpp/inc/: CommonStructs.hpp  ConfigurationSingleton.hpp  DummyController.hpp  HelpMessages.hpp  Messenger.hpp  SensorActuatorFactory.hpp  Simulator.hpp  UI.hpp  sim_interface.hpp
csdc-6/adcs-simulation/cpp/interface/: CMakeLists.txt  build.sh
csdc-6/adcs-simulation/cpp/interface/inc/: sim_interface.hpp
csdc-6/adcs-simulation/cpp/interface/src/: ADCS_device.cpp  ADCS_timer.cpp  Accelerometer.cpp  Actuator.cpp  CMakeLists.txt  Gyroscope.cpp  Reaction_wheel.cpp  Sensor.cpp
csdc-6/adcs-simulation/cpp/src/: Actuator.cpp  ConfigurationSingleton.cpp  DummyController.cpp  HelpMessages.cpp  Messenger.cpp  SensorActuatorFactory.cpp  Simulator.cpp  Simulator.hpp  UI.cpp  main.cpp
csdc-6/adcs-simulation/cpp/unit_tests/: unit_test_1.yaml  unit_test_2.yaml  unit_test_3.yaml  unit_test_4.yaml  unit_test_5.yaml
csdc-6/adcs-simulation/cpp/unit_tests/controller/: test_config_1.yaml  test_config_2.yaml  test_config_3.yaml  test_exit_2.yaml
csdc-6/adcs-simulation/cpp/unit_tests/no_controller/: unit_test_1.yaml  unit_test_2.yaml  unit_test_3.yaml  unit_test_4.yaml  unit_test_5.yaml  unit_test_6.yaml
csdc-6/adcs-simulation/cpp/unit_tests/no_controller/expected_results/: unit_test_4.csv  unit_test_5.csv  unit_test_6.csv
csdc-6/adcs-simulation/cpp/unit_tests/performance/: perf_test_config_1.yaml  perf_test_config_2.yaml  perf_test_config_3.yaml  perf_test_exit_3.yaml
csdc-6/adcs-stm32-driver/: README.md
gimbal/: README.md
gimbal/printed-prototypes/first-iteration/: gimbal-assembled.stl  inner-bearing-clip.stl  mid-ring.stl
gimbal/printed-prototypes/sat-frame/: fit0411-motor-frame.stl  sat-frame-oneu.stl
gimbal/printed-prototypes/second-iteration/: frame-connection.STL  gimbal-support.STL  mid-ring.STL  outer-ring.STL
orbit-modeling/python-example-sgp4/: README.md  SGP4OrbitModel.py
python-boost-tutorial/: CMakeLists.txt  build.sh  conanfile.py  readme.md  requirements.txt
python-boost-tutorial/inc/: demo.h
python-boost-tutorial/python/: demo.py
python-boost-tutorial/python_wrapper/: CMakeLists.txt  python_wrapper.cpp
python-boost-tutorial/src/: CMakeLists.txt  demo.cpp
reaction-wheel-control/: README.md
reaction-wheel-control/MotorBreakout/: MotorBreakout-B.Cu.gbl  MotorBreakout-B.Mask.gbs  MotorBreakout-B.SilkS.gbo  MotorBreakout-Edge.Cuts.gm1  MotorBreakout-F.Cu.gtl  MotorBreakout-F.Mask.gts  MotorBreakout-F.SilkS.gto  MotorBreakout-cache.lib  MotorBreakout.bak  MotorBreakout.drl  MotorBreakout.kicad_pcb  MotorBreakout.kicad_pcb-bak  MotorBreakout.net  MotorBreakout.sch
reaction-wheel-control/MotorBreakout/MotorBreakoutPlot/: MotorBreakout-F.Cu.gtl  (+1 more)
reaction-wheel-control/MotorBreakoutPlot/: MotorBreakout-B.Cu.gbl  MotorBreakout-B.Mask.gbs  MotorBreakout-B.SilkS.gbo  MotorBreakout-Edge.Cuts.gm1  MotorBreakout-F.Mask.gts  MotorBreakout.drl
system_architecture/: CommandExecuter.cpp  CommandExecuter.h  CommandHandler.cpp
(+27 files in other folders)
